--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,12 +5,40 @@
 	<body>
         <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 		{%if session['logged_in']%}
-		<div><a href="/">Annotator</a> | Logged in as "{{ session['username'] }}" | <a href="/logout">Logout</a></div>
+        <div><h4><a href="/">Annotator</a> | Logged in as "{{ session['username'] }}" | <a href="/logout">Logout</a></h4></div>
 		<hr>
 		{%else%}
-		<div><a href="/register">Register</a> | <a href="/login">Login</a></div>
+        <div><h4><a href="/register">Register</a> | <a href="/login">Login</a></h4></div>
 		<hr>
 		{%endif%}
-		{% block content %}{% endblock %}
+        <h4>{% block content %}</h4>{% endblock %}
+        <style>
+        .column{
+            width: 40%;
+            padding: 10px;
+            }
+
+        .left{
+            float: left;
+            }
+    
+        .right{
+            float: right;
+            }
+
+        .row:after {
+            content: "";
+            display: table;
+            clear: both;
+            }
+    
+        h4 {
+            color: black;
+            text-align: center;
+            font-family: Arial;
+            font-size: 20px;
+            vertical-align: bottom;
+            }
+        </style>
 	</body>
 </html>
