--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,51 +6,39 @@
 	{% if t1,t2,t3,t4 %}
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-.column{
-  width: 40%;
-  padding: 10px;
-}
 
-.left{
-    float: left;
-}
-    
-.right{
-    float: right;
-}
 
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-</style>
 
 <div class="row" style="width: 100%">
+    
   <div class="column left" style="width:48.5%;">
-	<h4>Fact Checking Article: </h4><iframe id="claim" style="display: block" width="100%" height="600" srcdoc="{{t1}}"></iframe>
+	<h4>Fact Checking Article: </h4><iframe id="cframe" style="display: block" width="100%" height="600" srcdoc="{{t1}}"></iframe>
   </div>
+    
   <div class="column right" style="width:48.5%;">
-	<h4>Origin Candidate:</h4><iframe id="origin" style="display: block" width="100%" height="600" srcdoc="{{t2}}"></iframe>
+	<h4>Origin Candidate:</h4><iframe id="oframe" style="display: block" width="100%" height="600" srcdoc="{{t2}}"></iframe>
   </div>
+    
 </div>
+
 <div class="row" style="width: 100%; height: 50px">
+    
     <form method="post" >
 	<table align="center" cellpadding="10" border="0" style="background-color: antiquewhite;">
         <tr>
-            <td rowspan="2"><h4>Is this an <i>origin</i> for the <i>claim?</i></h4></td>
+            <td rowspan="2"><h3>Is this an <i>origin</i> for the <i>claim?</i></h3></td>
             <td><input type="radio" name="op" id="op1" value="1" >Yes</td>
             <td><input type="radio" name="op" id="op2" value="2" >No</td>
             <td rowspan="2"><input type="submit" value=Next></td>
         </tr>
+        
         <tr>
-
             <td><input type="radio" name="op" id="op3" value="3" >Invalid Input</td>
             <td><input type="radio" name="op" id="op4" value="4" >Don't Know</td>
 	    </tr>
 	</table>
 	</form>
+    
 </div>
 {% endif %}
 {% endif %}
