--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,12 +3,13 @@
 {% if session['logged_in'] %}
 <p>You're logged in already!</p>
 {% else %}
-<h2>Login</h2>
+<h4>Login</h4>
+<div align="center">
 <form action="/login" method="POST">
   <input type="username" name="username" placeholder="Username">
   <input type="password" name="password" placeholder="Password">
   <input type="submit" value="Log in">
 </form>
-
+</div>
 {% endif %}
 {% endblock %}
