up-to-date version

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,11 +12,13 @@
 <div class="row" style="width: 100%">
     
   <div class="column left" style="width:48.5%;">
-	<h4>Fact Checking Article: </h4><iframe id="cframe" style="display: block" width="100%" height="600" srcdoc="{{t1}}"></iframe>
+      <h4><a id="cLink" href="{{t3}}" target="_blank">Fact Checking Article: </a></h4>
+      <iframe id="cframe" style="display: block" width="100%" height="600" srcdoc="{{t1}}"></iframe>
   </div>
     
   <div class="column right" style="width:48.5%;">
-	<h4>Origin Candidate:</h4><iframe id="oframe" style="display: block" width="100%" height="600" srcdoc="{{t2}}"></iframe>
+      <h4><a id="oLink" href={{t4}} target="_blank">Origin Candidate: </a></h4>
+      <iframe id="oframe" style="display: block" width="100%" height="600" srcdoc="{{t2}}"></iframe>
   </div>
     
 </div>
