--- a/annotator/core/templates/home.html
+++ b/annotator/core/templates/home.html
@@ -24,11 +24,11 @@
 				<div class="row no-gutters row-first justify-content-center">
 					<div class="col col-md-6 left">				 
 				        <!-- <h4><a id="cLink" href="{{t3}}" target="_blank">Fact Checking Article: </a></h4> -->
-				      <iframe id="cframe" style="display: block; margin: 0; padding: 0; position:absolute;"  width="100%" height="100%"srcdoc="{{t1}}"></iframe>
+				      <iframe id="cframe" style="display: block; margin: 0; padding: 0; position:absolute;"  width="100%" height="100%"srcdoc="{{t1}}" sandbox="allow-scripts"></iframe>
 				    </div>
 				    <div class="col col-md-6 right">				  
 				      <!-- <h4><a id="oLink" href={{t4}} target="_blank">Origin Candidate: </a></h4> -->
-				      <iframe id="oframe" style="display: block; margin: 0; padding: 0; position:absolute;" width="100%" height="100%" srcdoc="{{t2}}"></iframe>
+				      <iframe id="oframe" style="display: block; margin: 0; padding: 0; position:absolute;" width="100%" height="100%" srcdoc="{{t2}}" sandbox="allow-scripts"></iframe>
 				    </div>
 				</div>
 				<div class="row no-gutters row-second">
