--- a/annotator/core/templates/home.html
+++ b/annotator/core/templates/home.html
@@ -5,7 +5,7 @@
 	{% else %}
 		{% if t1 %}
 			<meta name="viewport" content="width=device-width, initial-scale=1">
-			
+			<input type="hidden" id="csrf_tok" value="">
 			<div class="container-fluid container-head justify-content-center">
 				<div class="row row-an ">
 					<p align="center">Annotated Origins: {{a_done}} / {{a_total}} for this page and {{t_done}} in total</p>
@@ -23,10 +23,10 @@
 			<div class="container-fluid container-main no-gutters text-center p-0">
 				<div class="row no-gutters row-first justify-content-center">
 					<div class="col col-md-6 left">				 
-				      <iframe id="cframe" style="display: block; margin: 0; padding: 0; position:absolute;"  width="100%" height="100%"srcdoc="{{t1}}" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts"></iframe>
+				      <iframe id="cFrame" style="display: block; margin: 0; padding: 0; position:absolute;"  width="100%" height="100%"srcdoc="{{t1}}" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts"></iframe>
 				    </div>
 				    <div class="col col-md-6 right">				  
-				      <iframe id="oframe" style="display: block; margin: 0; padding: 0; position:absolute;" width="100%" height="100%" srcdoc="{{t2}}" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts"></iframe>
+				      <iframe id="oFrame" style="display: block; margin: 0; padding: 0; position:absolute;" width="100%" height="100%" srcdoc="{{t2}}" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts"></iframe>
 				    </div>
 				</div>
 				<div class="row no-gutters row-second">
@@ -48,6 +48,12 @@
 						</form>
 					</div>
 				</div>
+                <script type="text/javascript">
+                    document.addEventListener("DOMContentLoaded", function(event) { 
+                        var csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
+                        document.getElementById("csrf_tok").value=csrftoken;
+                    });  
+                </script>
 		{% else %}
 			<h4>Error in the form</h4>
 	    {% endif %}
