--- a/annotator/core/templates/home.html
+++ b/annotator/core/templates/home.html
@@ -23,10 +23,10 @@
 			<div class="container-fluid container-main no-gutters text-center p-0">
 				<div class="row no-gutters row-first justify-content-center">
 					<div class="col col-md-6 left">				 
-				      <iframe id="cFrame" style="display: block; margin: 0; padding: 0; position:absolute;"  width="100%" height="100%"srcdoc="{{t1}}" sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts"></iframe>
+				      <iframe id="cFrame" style="display: block; margin: 0; padding: 0; position:absolute;"  width="100%" height="100%"srcdoc="{{t1}}" sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-modals"></iframe>
 				    </div>
 				    <div class="col col-md-6 right">				  
-				      <iframe id="oFrame" style="display: block; margin: 0; padding: 0; position:absolute;" width="100%" height="100%" srcdoc="{{t2}}" sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts"></iframe>
+				      <iframe id="oFrame" style="display: block; margin: 0; padding: 0; position:absolute;" width="100%" height="100%" srcdoc="{{t2}}" sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-modals"></iframe>
 				    </div>
 				</div>
 				<div class="row no-gutters row-second">
