--- a/annotator/core/templates/base.html
+++ b/annotator/core/templates/base.html
@@ -84,6 +84,14 @@
 		{% endif %}
 		<hr style=" margin: 0; padding: 2;">
 	</span>
+		<script>
+		function aux_func(_this){
+			let link = document.getElementById("oLink").href;
+			var elmnt = _this.contentDocument.getElementById(link); 
+			elmnt.style.backgroundColor="yellow"; 
+			elmnt.scrollIntoView({ behavior: "smooth", block: "center"  });
+		}
+		</script>
 		{% block content %}
 		{% endblock %}
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
