--- a/annotator/core/templates/home.html
+++ b/annotator/core/templates/home.html
@@ -1,21 +1,21 @@
 {% extends "base.html" %}
 {% block content %}
 	{% if not user.is_authenticated %}
-		<h4>Please <a href="accounts/login">log in </a>to annotate.</h4>
+<div class="base"><h4>Please <a href="accounts/login">log in </a>to annotate.</h4></div>
 	{% else %}
 		{% if t1 %}
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 			<input type="hidden" id="csrf_tok" value="">
 			<div class="container-fluid container-head justify-content-center">
 				<div class="row row-an ">
-					<p align="center">Annotated Origins: {{a_done}} / {{a_total}} for this page and {{t_done}} in total</p>
+                    <p align="center"><b>Annotated Origins: {{a_done}} / {{a_total}} for this page and {{t_done}} in total</b></p>
 				</div>
 				<div class="row row-head">
 					<div class="col col-head col-md-6 justify-content-center">
-						<p style="margin: 0;"><a id="cLink" href="{{t3}}" target="_blank">Fact Checking Article: </a></p>
+                        <p style="margin: 0;"><a id="cLink" href="{{t3}}" target="_blank">Fact Checking Article: </a></p>
 					</div>
 					<div class="col col-head col-md-6 justify-content-center">
-						<p style="margin: 0;"><a id="oLink" href={{t4}} target="_blank">Origin Candidate: </a></p>
+                        <p style="margin: 0;"><a id="oLink" href={{t4}} target="_blank">Origin Candidate: </a></p>
 					</div>
 				</div>
 			</div>
@@ -23,7 +23,7 @@
 			<div class="container-fluid container-main no-gutters text-center p-0">
 				<div class="row no-gutters row-first justify-content-center">
 					<div class="col col-md-6 left">				 
-				      <iframe id="cFrame" style="display: block; margin: 0; padding: 0; position:absolute;"  width="100%" height="100%"srcdoc="{{t1}}" sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-modals" onload="aux_func(this)"></iframe>
+				      <iframe id="cFrame" style="display: block; margin: 0; padding: 0; position:absolute;"  width="100%" height="100%" srcdoc="{{t1}}" sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-modals" onload="aux_func(this)"></iframe>
 				    </div>
 				    <div class="col col-md-6 right">				  
 				      <iframe id="oFrame" style="display: block; margin: 0; padding: 0; position:absolute;" width="100%" height="100%" srcdoc="{{t2}}" sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-modals"></iframe>
