--- a/annotator/core/templates/registration/signup.html
+++ b/annotator/core/templates/registration/signup.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="signup_form">
 	<h2>Sign Up!</h2>
 	<form method="POST">
 		{% csrf_token %}
 		{{ form.as_p }}
 		<button type="submit">Sign Up</button>
 	</form>
-
+</div>
 {% endblock %}
