--- a/annotator/core/templates/home.html
+++ b/annotator/core/templates/home.html
@@ -36,13 +36,13 @@
 							<table align="center" style="width: 100%;" border="1" style="background-color: antiquewhite; margin: 0; padding: 0;">
 						        <tr>
 						            <td rowspan="2"><h3>Is this an <i>origin</i> for the <i>claim?</i></h3></td>
-						            <td><input type="radio" name="op" id="op1" value="1" >Yes</td>
-						            <td><input type="radio" name="op" id="op2" value="2" >No</td>
+						            <td><input type="checkbox" name="op" id="op1" value="1" >Yes</td>
+						            <td><input type="checkbox" name="op" id="op2" value="2" >No</td>
 						            <td rowspan="2"><input type="submit" value=Next></td>
 						        </tr>
 						        <tr>
-						            <td><input type="radio" name="op" id="op3" value="3" >Invalid Input</td>
-						            <td><input type="radio" name="op" id="op4" value="4" >Don't Know</td>
+						            <td><input type="checkbox" name="op" id="op3" value="3" >Invalid Input</td>
+						            <td><input type="checkbox" name="op" id="op4" value="4" >Don't Know</td>
 							    </tr>
 							</table>
 						</form>
