added shuffling, changed radio-buttons

--- a/annotator/core/templates/base.html
+++ b/annotator/core/templates/base.html
@@ -94,6 +94,7 @@
 		{% endif %}
 		<hr style=" margin: 0; padding: 2;">
 	</div>
+    <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 		<script>
 		function aux_func(_this){
 			let link = document.getElementById("oLink").href;
