--- a/annotator/core/templates/base.html
+++ b/annotator/core/templates/base.html
@@ -86,7 +86,7 @@
 		<h4 style=" margin: 0; padding: 2;">Annotator</h4>
 		<a href="{% url 'home' %}">Home</a> /
 		{% if user.is_authenticated %}
-		<a href="{% url 'logout' %}">Log Out</a>
+		<a href="{% url 'logout' %}" id="logout">Log Out</a>
 		You are logged in as <strong>{{user.username}}</strong>
 		{% else %}
 		<a href="{% url 'signup' %}">Sign Up</a> /
@@ -95,12 +95,26 @@
 		<hr style=" margin: 0; padding: 2;">
 	</div>
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+    
 		<script>
 		function aux_func(_this){
 			let link = document.getElementById("oLink").href;
 			var elmnt = _this.contentDocument.getElementById(link);
 			elmnt.scrollIntoView({ behavior: "smooth", block: "center"  });
 		}
+        $( document ).ready(function() {
+            $( "#logout" ).on("click", function(e) {
+                    e.preventDefault();
+                    var cookies = Cookies.get();
+                    //console.log(cookies);
+                    for(var cookie in cookies) {
+                        //console.log(cookie);
+                        Cookies.remove(cookie);
+                    }
+                    window.location.href="{% url 'logout' %}";
+                });
+            });
 		</script>
     <br>
 		{% block content %}
