--- a/annotator/core/templates/base.html
+++ b/annotator/core/templates/base.html
@@ -13,61 +13,29 @@
 			height: 100%;
             margin: 0;
             padding: 0;
+            overflow-x: hidden;
         }
         .base{
         	height: 5%;
             text-align: center;
         }
-        .container-head {
-        	height: 5%;
-			padding-left: 0px;
-			padding-right: 0px;
-            min-height: 60px;
-		}
-		.container-main {
-			height: 90%;
-			min-height: 800px;
-		}
-		.row-an {
-			height:50%;
-            min-height: 30px;
-			overflow: hidden;
-			margin: 0;
-			padding: 0;
-		}
-		.row-head {
-			height:50%;
-            min-height: 40px;
-			overflow: hidden;
-			margin: 0;
-			padding: 0;
-		}
-		.row-first {
-			height:90%;
-			overflow: hidden;
-			margin: 0;
-			padding: 0;
-		}
-		.row-second {
-			height:10%;
-			overflow: hidden;
-			margin: 0;
-			padding: 0;
-		}
-		.col-first {
-			height:10%;
-			overflow: hidden;
-			margin: 0;
-			padding: 0;
-		}
-		.col-head {
-			height:100%;
-			overflow: hidden;
-			margin: 0;
-			padding: 0;
-			display:block;
-			text-align:center
-		}
+        .form-row{
+            height: 20%;
+            min-height: 100px;
+        }
+        .heading-row{
+            height: 2%;
+            min-height: 10px;
+        }
+        .frame-row{
+            height:  75%;
+            min-height: 800px;
+            align-self: center;
+        }
+        .container-main{
+            margin: 0;
+            width: 100%;
+        }
 		iframe{
 			width:100%;
 			border: 2px solid #f056ff;
@@ -90,7 +58,7 @@
 		You are logged in as <strong>{{user.username}}</strong>
 		{% else %}
 		<a href="{% url 'signup' %}">Sign Up</a> /
-		<a href="{% url 'login' %}">Log In</a> /
+		<a href="{% url 'login' %}" id="login" >Log In</a> /
 		{% endif %}
 		<hr style=" margin: 0; padding: 2;">
 	</div>
@@ -104,7 +72,7 @@
 			elmnt.scrollIntoView({ behavior: "smooth", block: "center"  });
 		}
         $( document ).ready(function() {
-            $( "#logout" ).on("click", function(e) {
+            $( "#logout", "#login" ).on("click", function(e) {
                     e.preventDefault();
                     var cookies = Cookies.get();
                     //console.log(cookies);
@@ -112,6 +80,7 @@
                         //console.log(cookie);
                         Cookies.remove(cookie);
                     }
+		    window.localStorage.clear();
                     window.location.href="{% url 'logout' %}";
                 });
             });
@@ -126,5 +95,3 @@
 	
 </body>
 </html>
-
-
