--- a/annotator/core/templates/home.html
+++ b/annotator/core/templates/home.html
@@ -41,7 +41,7 @@
 				      <iframe id="cFrame" style="display: block; margin: 0; padding: 0; position:absolute;"  width="100%" height="100%" srcdoc="{{t1}}" sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-modals" onload="aux_func(this)"></iframe>
 				    </div>
 				    <div class="col col-md-6 right">				  
-				      <iframe id="oFrame" style="display: block; margin: 0; padding: 0; position:absolute;" width="100%" height="100%" srcdoc="{{t2}}" sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-modals"></iframe>
+				      <iframe id="oFrame" style="display: block; margin: 0; padding: 0; position:absolute;" width="100%" height="100%" srcdoc="{{t2}}" sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts"></iframe>
 				    </div>
 				</div>
                 <div class="row no-gutters">
